<resources>
    <string name="app_name">CongWang_OsmanJan_COMP304Sec002_Lab4_Ex1</string>
    <string name="app_title">Patients Management System</string>
    <string name="login_button">Login</string>
    <string name="patient_button">My Patients</string>
    <string name="username_hint">Nurse ID</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="Patient">Patient</string>
    <string name="Nurse">Nurse</string>
    <string name="Department">Department</string>
    <string name="Room">Room</string>
    <string name="View_Tests">View tests</string>
    <string name="add_patient">Add your patient</string>
    <string name="patient_firstName">Patient first name</string>
    <string name="patient_lastName">Patient last name</string>
    <string name="patient_department">Patient department</string>
    <string name="nurse_id">Nurse ID</string>
    <string name="patient_room">Patient room</string>
    <string name="add_test">Add test</string>
    <string name="patient_id">Patient ID</string>
    <string name="BPH">BPH</string>
    <string name="BPL">BPL</string>
    <string name="temperature">Temperature</string>
    <string name="patientFullName">Patient Fullname</string>
    <string name="patientInfo">Patient Information</string>
    <string name="Update">Update</string>
    <string name="testId">Test ID</string>
    <string name="test_info">Test Information</string>
    <string name="back">Back</string>


    <string-array name="firstName">
        <item>Max</item>
        <item>Nan</item>
        <item>Lucy</item>
        <item>Tom</item>
        <item>Lily</item>
        <item>Jessica</item>
    </string-array>

    <string-array name="lastName">
        <item>Burney</item>
        <item>Christina</item>
        <item>Min</item>
        <item>Hank</item>
        <item>Joan</item>
        <item>Aran</item>
    </string-array>

    <string-array name="department">
        <item>DC</item>
        <item>MM</item>
        <item>AD</item>
        <item>AG</item>
        <item>SS</item>
        <item>ZW</item>
    </string-array>
</resources>