<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTestActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_test"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_patientId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/patient_id"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="@dimen/size16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <EditText
        android:id="@+id/editText_nurseId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nurse_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_patientId"
        app:layout_constraintTop_toBottomOf="@+id/editText_patientId" />

    <EditText
        android:id="@+id/editText_BPL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/BPL"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_nurseId"
        app:layout_constraintTop_toBottomOf="@+id/editText_nurseId" />

    <EditText
        android:id="@+id/editText_BPH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/BPH"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_BPL"
        app:layout_constraintTop_toBottomOf="@+id/editText_BPL" />

    <EditText
        android:id="@+id/editText_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/temperature"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_BPH"
        app:layout_constraintTop_toBottomOf="@+id/editText_BPH" />

    <Button
        android:id="@+id/add_button"
        android:onClick="addTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/editText_temperature" />
</androidx.constraintlayout.widget.ConstraintLayout>