<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientUpdateInfoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/patientInfo"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/patient_id"
        android:textColor="@color/grey"
        android:textSize="@dimen/size12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="@+id/guideline23" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/patientFullName"
        android:textColor="@color/grey"
        android:textSize="@dimen/size12sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Department"
        android:textColor="@color/grey"
        android:textSize="@dimen/size12sp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/nurse_id"
        android:textColor="@color/grey"
        android:textSize="@dimen/size12sp"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Room"
        android:textColor="@color/grey"
        android:textSize="@dimen/size12sp"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView_patientId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="100"
        android:focusable="false"
        android:inputType="number"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editText_patientFullName"
        android:layout_width="@dimen/size140sp"
        android:layout_height="wrap_content"
        android:hint="Patient a"
        android:maxLines="1"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/textView_patientId"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editText_department"
        android:maxLines="1"
        android:layout_width="@dimen/size140sp"
        android:layout_height="wrap_content"
        android:hint="Department a"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_patientFullName"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/editText_nurseId"
        android:maxLines="1"
        android:layout_width="@dimen/size140sp"
        android:layout_height="wrap_content"
        android:hint="Nurse a"
        android:inputType="number"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_department"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/editText_room"
        android:maxLines="1"
        android:layout_width="@dimen/size140sp"
        android:layout_height="wrap_content"
        android:hint="Room 312"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/size16sp"
        app:layout_constraintStart_toStartOf="@+id/editText_nurseId"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/update_button"
        android:onClick="updatePatientInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toBottomOf="@+id/editText_room" />
</androidx.constraintlayout.widget.ConstraintLayout>